--- a/shopping-cart/src/main/resources/templates/admin/category.html
+++ b/shopping-cart/src/main/resources/templates/admin/category.html
@@ -4,54 +4,60 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body>
 	<section>
 		<div class="container-fluid p-5 mt-5">
 			<div class="row">
-				<div class="col-md-3">
+				<!-- Add Category Form Section -->
+				<div class="col-md-6">
 					<div class="card card-sh">
-						<div class="card-header text-center ">
-							<p class="fs-4">Add Category</p>
-							
-						</div>
+						<div class="card-header text-center fs-4">Add Category</div>
 						<div class="card-body">
-							<form action="/admin/saveCategory" method="post"
+							<!-- Display Success Message -->
+							<th:block th:if="${SuccessMsg}">
+								<p class="text-success fw-bold">[[${SuccessMsg}]]</p>
+							</th:block>
+							<!-- Display Error Message -->
+							<th:block th:if="${ErrorMsg}">
+								<p class="text-danger fw-bold">[[${ErrorMsg}]]</p>
+							</th:block>
+
+							<form action="/admin/savecategory" method="post"
 								enctype="multipart/form-data">
 								<div class="mb-3">
 									<label>Enter Category</label> <input type="text" name="name"
-										class="form-control">
+										class="form-control" required>
 								</div>
-
 								<div class="mb-3">
 									<label>Status</label>
-
 									<div class="form-check">
 										<input class="form-check-input" type="radio" checked
 											value="true" name="isActive" id="flexRadioDefault1">
-										<label class="form-check-label" for="flexRadioDefault1">
-											Active </label>
+										<label class="form-check-label" for="flexRadioDefault1">Active</label>
 									</div>
 									<div class="form-check">
 										<input class="form-check-input" type="radio" name="isActive"
 											value="false" id="flexRadioDefault2"> <label
-											class="form-check-label" for="flexRadioDefault2">
-											Inactive </label>
+											class="form-check-label" for="flexRadioDefault2">Inactive</label>
 									</div>
-
 								</div>
-
 								<div class="mb-3">
-									<label>Upload Image</label> <input type="file" name="file"
-										class="form-control">
+									<label>Upload Image</label> <input type="file" name="image"
+										class="form-control" accept="image/*" required>
 								</div>
-								<button class="btn btn-primary col-md-12 mt-2">Save</button>
+
+								<button type="submit" class="btn btn-primary col-md-12 mt-3">Save
+									Category</button>
 							</form>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-8">
+				<!-- Category Details Table Section -->
+				<div class="col-md-6">
 					<div class="card card-sh">
 						<div class="card-header text-center fs-4">Category Details</div>
 						<div class="card-body">
@@ -66,58 +72,34 @@
 									</tr>
 								</thead>
 								<tbody>
-									<tr th:each="cat,c:${categorys}">
-										<th scope="row">[[${c.count}]]</th>
+									<tr th:each="cat, iterStat : ${category}">
+										<th scope="row">[[${iterStat.index + 1}]]</th>
 										<td>[[${cat.name}]]</td>
-										<td>[[${cat.isActive}]]</td>
+										<td><span th:if="${cat.isActive}" class="text-success">Active</span>
+											<span th:if="${!cat.isActive}" class="text-danger">Inactive</span>
+										</td>
 										<td><img
-											th:src="@{'/img/category_img/'+${cat.imageName}}"
-											width="50px" height="50px"></td>
+											th:src="@{'/img/Category-img/' + ${cat.imageName}}"
+											width="50px" height="50px" alt="Category Image"></td>
 										<td><a th:href="@{'/admin/loadEditCategory/'+${cat.id}}"
-											class="btn btn-primary btn-sm"><i
-												class="fa-solid fa-pen-to-square  fa-1x"></i> Edit </a> <a
-											th:href="@{'/admin/deleteCategory/'+${cat.id}}"
-											class="btn btn-danger btn-sm"><i
-												class="fa-solid fa-trash  fa-1x"></i>Delete</a></td>
+											class="btn btn-primary btn-sm"> <i
+												class="fa-solid fa-pen-to-square  fa-1x"></i> Edit
+										</a> <a th:href="@{'/admin/deleteCategory/'+${cat.id}}"
+											class="btn btn-danger btn-sm"> <i
+												class="fa-solid fa-trash  fa-1x"></i> Delete
+										</a></td>
 									</tr>
-
 								</tbody>
 							</table>
-
-							<div class="row">
-								<div class="col-md-4">Total Category :
-									[[${totalElements}]]</div>
-								<div class="col-md-6">
-
-									<nav aria-label="Page navigation example">
-										<ul class="pagination">
-											<li class="page-item"
-												th:classappend="${isFirst} ? 'disabled':''"><a
-												class="page-link"
-												th:href="@{'/admin/category?pageNo='+${pageNo-1}}"
-												aria-label="Previous"> <span aria-hidden="true">&laquo;</span>
-											</a></li>
-
-											<li class="page-item"><a class="page-link"></a></li>
-
-											<li class="page-item"
-												th:classappend="${isLast} ? 'disabled':''"><a
-												class="page-link"
-												th:href="@{'/admin/category?pageNo='+${pageNo+1}}"
-												aria-label="Next"> <span aria-hidden="true">&raquo;</span>
-											</a></li>
-										</ul>
-									</nav>
-								</div>
-
-							</div>
 						</div>
 					</div>
-
 				</div>
 
 			</div>
 		</div>
 	</section>
+
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
